fix floating window overlap

--- a/src/bs/bs.css
+++ b/src/bs/bs.css
@@ -55,20 +55,6 @@
 
 /*added bs-showinfo on screen*/
 .bs-showinfo {
-    /* position: fixed;
-    width: auto;
-    min-width: 300px;   
-    max-width: 600px;    
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    padding: 8px;
-    border-radius: 4px;
-    z-index: 1000;
-    text-align: left ;
-    align-items: space-between;
-    line-height: 1.5; */
-     /* Adjusted line height for better readability */
-    
     position: absolute;
     display: flex;
     flex-direction: column;
